# hermes-openclaw-adapter

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  docker-compose.yml  mock_openclaw_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  approval_decision_event_recorder_v0_7.py  approval_decision_events_v0_7.py  approval_packet_builder.py  approval_security_gate_v0_7.py  audit_trail_display_v0_7.py  auto_approval_policy_v0_7.py  blackboard_board_reader.py  blackboard_store.py  blackboard_validators.py  contracts_v0_7.py  dashboard_intake_view_v0_7.py  demo_task_cleanup_v0_7.py  evidence_bundle_builder.py  full_loop_preview_adapter.py  google_sheets_oauth_writer.py  hash_chain.py  health_store.py  hermes_result_readback_mock.py  hermes_strategy_suggestion_model.py  main.py  mock_adapter_v0_7.py  mock_e2e_v0_7.py  mock_hermes_generator.py  mock_openclaw_gateway.py  queue_intake_bridge_v0_7.py  queue_store.py  queue_task_annotation_v0_7.py  remote_readonly_projection.py  result_feedback_preview.py  result_sink.py  rollback_preview_builder.py  security_gates_v0_7.py  worker.py  worker_mock_gateway_dry_run.py
docs/: ARCHITECTURE.md  BACKUP_PUSH_PLAN.md  FIRST_PRODUCT_WORKFLOW_TEST_REPORT.md  GOOGLE_DRIVE_SHEETS_LINKED.md  HERMES_ACTIVATION_POLICY_INTEGRATION_CHECK_V0_9_F.md  HERMES_CALLBACK_CONTRACT_PLAN_V0_9_6_A.md  HERMES_CONNECTION_DIAGNOSIS.md  HERMES_CONNECTOR_TRIAL_DASHBOARD_READ_ONLY_VIEW_BOUNDARY_V0_9_5_D.md  HERMES_DASHBOARD_ADVICE_PANEL_V0_9_D.md  HERMES_FULL_BLACKBOARD_LOOP_REHEARSAL_CLOSEOUT_V1_0_RC_R.md  (+156 more)
(+331 files in other folders)
