[project]
name = "hermes-openclaw-adapter"
version = "0.1.0"
description = "Hermes → Adapter → OpenClaw MVP starter"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx==0.28.1",
  "pydantic==2.10.4",
  "python-dotenv==1.0.1",
  "jinja2==3.1.4",
  "python-multipart==0.0.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = true
files = [
  "app/blackboard_validators.py",
  "app/approval_packet_builder.py",
  "app/evidence_bundle_builder.py",
  "app/remote_readonly_projection.py",
  "app/hash_chain.py",
  "app/rollback_preview_builder.py",
]
